<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openjfx</groupId>
    <artifactId>gradefx</artifactId>
    <version>1.2.2</version>
    <packaging>jar</packaging>

    <name>GradeFX</name>

    <properties>
		<project.vendor>Fabian Kaschta</project.vendor>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>24</java.version>
        <javafx.version>24</javafx.version>
        <kafx.version>1.2.0</kafx.version>
        <pdfbox.version>3.0.5</pdfbox.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <dependency.plugin.version>3.8.1</dependency.plugin.version>
        <javafx.plugin.version>0.0.8</javafx.plugin.version>
        <jpackage.plugin.version>1.6.6</jpackage.plugin.version>
        <module.path>${project.groupId}.${project.artifactId}</module.path>
        <main.class>${module.path}.GradeFXMain</main.class>
    </properties>
    
	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/fabiankaschta/KAFXBase</url>
		</repository>
	</repositories>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>kafx</artifactId>
			<version>${kafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>${pdfbox.version}</version>
		</dependency>
    </dependencies>

    <build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/resources-filtered</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
        <plugins>
            <!-- copy all modular dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${dependency.plugin.version}</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
		                <configuration>
		              		<outputDirectory>${project.build.directory}/modules</outputDirectory>
		              		<includeGroupIds>commons-logging</includeGroupIds> <!-- required by org.apache.pdfbox -->
		                </configuration>
					</execution>
				</executions>
            </plugin>
            <!-- javafx:run, javafx:jlink -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.plugin.version}</version>
                <configuration>
                    <mainClass>${project.groupId}.${project.artifactId}/${main.class}</mainClass>
                    <jmodsPath>target/modules</jmodsPath>
                </configuration>
            </plugin>
            <!-- copy & make non-modular dependencies modular -->
            <plugin>
			    <groupId>org.moditect</groupId>
			    <artifactId>moditect-maven-plugin</artifactId>
			    <version>1.3.0.Final</version>
			    <executions>
			        <execution>
			            <id>add-module-infos</id>
			            <phase>generate-resources</phase>
			            <goals>
			                <goal>add-module-info</goal>
			            </goals>
			            <configuration>
							<outputDirectory>${project.build.directory}/modules</outputDirectory>
			                <overwriteExistingFiles>true</overwriteExistingFiles>
			                <modules>
			                    <module>
			                        <artifact>
										<groupId>com.github.zafarkhaja</groupId>
										<artifactId>java-semver</artifactId>
										<version>0.10.2</version>
			                        </artifact>
			                        <moduleInfo>
			                            <name>com.github.zafarkhaja.semver</name>
			                            <opens>
			                                *;
			                            </opens>
			                        </moduleInfo>
			                    </module>
			                    <module>
			                        <artifact>
										<groupId>org.apache.pdfbox</groupId>
										<artifactId>pdfbox-io</artifactId>
		                                <version>3.0.5</version>
			                        </artifact>
			                        <moduleInfo>
			                            <name>org.apache.pdfbox.io</name>
			                            <opens>
			                                *;
			                            </opens>
			                        </moduleInfo>
			                    </module>
			                    <module>
			                        <artifact>
										<groupId>org.apache.pdfbox</groupId>
										<artifactId>fontbox</artifactId>
		                                <version>3.0.5</version>
			                        </artifact>
			                        <moduleInfo>
			                            <name>org.apache.fontbox</name>
			                            <opens>
			                                *;
			                            </opens>
			                        </moduleInfo>
			                    </module>
			                    <module>
			                        <artifact>
										<groupId>org.apache.pdfbox</groupId>
										<artifactId>pdfbox</artifactId>
										<version>3.0.5</version>
			                        </artifact>
			                        <additionalDependencies>
			                            <dependency>
			                                <groupId>org.apache.pdfbox</groupId>
			                                <artifactId>pdfbox-io</artifactId>
			                                <version>3.0.5</version>
			                            </dependency>
			                            <dependency>
			                                <groupId>org.apache.pdfbox</groupId>
			                                <artifactId>fontbox</artifactId>
			                                <version>3.0.5</version>
			                            </dependency>
			                            <dependency>
			                                <groupId>commons-logging</groupId>
			                                <artifactId>commons-logging</artifactId>
			                                <version>1.3.5</version>
			                            </dependency>
			                        </additionalDependencies>
			                        <moduleInfo>
			                            <name>org.apache.pdfbox</name>
			                            <opens>
			                                *;
			                            </opens>
			                        </moduleInfo>
			                    </module>
			                </modules>
			                <jdepsExtraArgs>
			                	<arg>--multi-release=9</arg>
			                	<arg>--ignore-missing-deps</arg>
			                </jdepsExtraArgs>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
            <!-- jpackage -->
			<plugin>
				<groupId>org.panteleyev</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<version>${jpackage.plugin.version}</version>

				<configuration>
					<name>${project.name}</name>
					<appVersion>${project.version}</appVersion>
					<vendor>${project.vendor}</vendor>
					<runtimeImage>target/image</runtimeImage>
					<module>${module.path}/${main.class}</module>
					<modulePaths>
						<modulePath>${project.build.directory}</modulePath>
					</modulePaths>
					<destination>${project.build.directory}/dist</destination>
					<javaOptions>
						<option>--enable-preview</option>
						<option>-Dfile.encoding=${project.build.sourceEncoding}</option>
					</javaOptions>
				</configuration>
			    <executions>
			        <execution>
			            <id>macos-pkg</id>
                        <configuration>
                        	<type>PKG</type>
                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.png</icon>
                        </configuration>
			        </execution>
			        <execution>
			            <id>macos-dmg</id>
                        <configuration>
                        	<type>DMG</type>
                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.png</icon>
                        </configuration>
			        </execution>
			        <execution>
			            <id>windows-exe</id>
                        <configuration>
                        	<type>EXE</type>
                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.ico</icon>
                            <winMenu>true</winMenu>
                            <winDirChooser>true</winDirChooser>
                            <winShortcut>true</winShortcut>
                        </configuration>
			        </execution>
			        <execution>
			            <id>windows-msi</id>
                        <configuration>
                        	<type>MSI</type>
                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.ico</icon>
                            <winMenu>true</winMenu>
                            <winDirChooser>true</winDirChooser>
                            <winShortcut>true</winShortcut>
                        </configuration>
			        </execution>
			        <execution>
			            <id>linux-deb</id>
                        <configuration>
                        	<type>DEB</type>
                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.png</icon>
                            <linuxShortcut>true</linuxShortcut>
                        </configuration>
			        </execution>
			        <execution>
			            <id>linux-rpm</id>
                        <configuration>
                        	<type>RPM</type>
                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.png</icon>
                            <linuxShortcut>true</linuxShortcut>
                        </configuration>
			        </execution>
			        <execution>
			            <id>linux-image</id>
                        <configuration>
                        	<type>APP_IMAGE</type>
                            <icon>src/main/resources/org/openjfx/gradefx/img/icon.png</icon>
                        </configuration>
			        </execution>
			    </executions>
			</plugin>

        </plugins>
    </build>
    
	<distributionManagement>
		<repository>
			<id>githubDist</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/fabiankaschta/GradeFX</url>
	    </repository>
	</distributionManagement>
    
</project>